Fixed HTML body overlapping with header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,6 @@ html {
     padding:0;
     box-sizing: border-box;
     text-decoration: none;
-    text-transform: capitalize;
     overflow: hidden;
 }
 
@@ -34,6 +33,20 @@ form textarea {
     resize: none;
 }
 
+.body-contact {
+    height: 100%;
+    overflow-y: hidden;
+}
+
+.container-contact {
+    display: flex;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    overflow: hidden;
+}
+
 .contact {
     margin: 0;
     height: 100vh;
@@ -48,11 +61,10 @@ form textarea {
 
 .contact-form {
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 450px;
-    
     border-style: solid;
     padding: 35px;
     border-radius: 7px;
@@ -70,11 +82,6 @@ form textarea {
 .contact-title {
     text-align: center;
     padding-bottom: 10px;
-}
-
-.container {
-    position: relative;
-    overflow: hidden;
 }
 
 .logo {
